--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
+    "mongodb": "^6.5.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-reveal": "^1.2.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
