--- a/.env
+++ b/.env
@@ -27,7 +27,8 @@ STRIPE_SIGNING_SECRET=
 
 # Mongodb Database
 # Use mongodb connection url with driver node.js and version 2.2.12 or later
-MONGODB_URI=mongodb+srv://gadget-storebd:WJqb12kP4tHYGEB2@cluster0.nswkl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://gadget-storebd:WJqb12kP4tHYGEB2@cluster0.nswkl.mongodb.net/gadget-storebd?retryWrites=true&w=majority
+
 # Your database name
 MONGODB_DB=gadget-storebd
 # Add monogdb connection url 
