Update environment variables and remove footer component

--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@
 GOOGLE_ID=
 GOOGLE_SECRET=
 
+BASE_URL=http://localhost:3000/
+#BASE_URL=https://gadget-storebd.vercel.app/
+
 # Need to add this to... google cloud
 # http://localhost:3000/api/auth/callback/google
 
