--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongoose": "^8.3.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
