--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3"
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
