--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
