--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ BASE_URL=http://localhost:3000/
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/
 
 MONGODB_URI=mongodb+srv://gadget-storebd:WJqb12kP4tHYGEB2@cluster0.nswkl.mongodb.net/gadget-storebd?retryWrites=true&w=majority
+
+ENVIRONMENT=gadget-storebd
