--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
