--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/mongodb-adapter": "^3.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^10.0.5",
     "zustand": "^4.5.2"
   },
