--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.0",
