--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^10.0.5",
+    "use-debounce": "^10.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
