--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/mongodb-adapter": "^3.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.20",
     "axios": "^1.6.8",
