--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "use-debounce": "^10.0.1",
     "zustand": "^4.5.2"
