--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
