--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.6.2",
